src/css/components/Nav.styl
.modal-overlay
  position: fixed
  top: 0px
  left: 0px
  right: 0px
  bottom: 0px
  background: rgba(0,0,0,0.5)
  z-index: 1050

.modal-container
  position: absolute
  display: flex
  flex-direction: column
  height: fit-content
  width: 80%
  min-width: 320px
  top: 0
  left: 0
  right: 0
  bottom: 0
  margin: auto
  background: rgba(255, 255, 255, 1)
  box-shadow: 0 5px 15px rgba(0,0,0,.5)
  border: 1px solid rgba(0,0,0,.2)
  border-radius: 6px
  overflow: auto
  outline: none

.main-nav-bar
  box-shadow: 0 3px 10px rgba(0,0,0,0.1)
  z-index: 1000000
  position: fixed
  width: 100%

.modal-container button
  margin: 15px auto

.modal-header
  padding: 15px
  border-bottom: 1px solid #e5e5e5

.modal-body
  padding: 15px 15px 0

.modal-body span
  line-height: 20px

.hhs
    line-height: 1.1
    vertical-align: text-top

.nav-bar
  width: 95%

.logo-wrapper
  display: flex
  min-height: 50px
  margin-left: 0

.fda-logo
  width: 180px

.nav-bar-divider-line
  border-right: 1px solid rgba(0,0,0,0.1)
  margin: 0px 15px
  height: 50px
  width: 1px

.dropdown
  position: relative
  display: inline-block
  cursor: pointer

.dropdown-content
  position: absolute
  right: 0px

.display-block
  display: block

.display-none
  display: none

.menu-container
  display: inherit
  justify-content: flex-end
  flex: auto

.menu-container
  > div
    margin-left: 10px

.menu-header
  display: block
  position: relative
  margin-bottom: 0
  padding: 1.5em 0.5em
  color: #666666
  line-height: 2em

.emphasis
  color: $clrPrimary

.menu-header-underbar
  border-top: 4px solid #00AAFF
  margin: -1.5em 0px 21px 0.6em
  bottom: 0
  height: 1px
  width: calc(100% - 38px)

.fa-angle-down
  padding-left: 0.5em

.sub-menu-container
  position: relative
  margin-bottom: 0
  background-color: $clrWhite
  border: 1px solid #ccc
  border-bottom-left-radius: 3px
  border-bottom-right-radius: 3px
  box-shadow: 0 3px 6px rgba(0,0,0,0.2)
  min-width: 203px
  text-align: left

.sub-menu-item
  display: block
  padding: 10px 15px
  line-height: 1em
  color: #666666

.sub-menu-item:hover
  background-color: $clrPrimary
  color: $clrWhite

.sub-menu-item:focus
  -webkit-box-shadow: 0 0 3px #3e94cf, 0 0 7px #3e94cf
  -moz-box-shadow: 0 0 3px #3e94cf, 0 0 7px #3e94cf
  box-shadow: 0 0 3px #3e94cf, 0 0 7px #3e94cf

.open-fda-logo
  width: 180px

.nav-logos
  display: flex
  align-items: center

@media $bpTabRange

  .fda-bar
    margin-top: 35px

@media $bpMob

  .fda-bar
    margin-top: 55px

  .fda-logo
    display: none

  .nav-bar-divider-line
    display: none

@media $tablet
  .nav-ul
    display: flex
    flex-direction: row
    flex-wrap: wrap

  .logo-wrapper
    width: 95%

  .hhs
    text-align: left
    width: 100%

  .nav-bar
    background: white

  .menu-header
    padding: 1em

  .menu-header-underbar
    margin: -1em 0px 21px 1em
    width: calc(100% - 2em)

  .menu-container
    display: block
    padding-top: 20px

  .dropdown-content
    z-index: 10
    position: fixed
    width: 100%

  .sub-menu-container
    text-align: left
    border: none

  .sub-menu-item
    border: 1px solid #ccc
    border-bottom-left-radius: 3px
    border-bottom-right-radius: 3px

  .open-fda-logo
    position: relative
    align-self: center

  .nav-li + .nav-li
    border-top: 1px solid $clrGrayLightest

  .hhs
    float: right
    text-align: right

@media $bpDesk
  .nav-li
    margin-right: 15px
    min-width: 160px

